# sobe

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: pypi.yaml
docs/: conf.py  configuration.rst  index.rst  usage.rst
docs/api/: aws.rst  cli.rst  config.rst
scripts/: validate_version.py
src/sobe/: aws.py  config.py  main.py
tests/: test_aws.py  test_config.py  test_main.py
